[package]
name = "gantz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
reqwest = { version = "0.11.11", features = ["deflate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
